Changes in Regression Class

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7567f1">  <td>19/10/10 19:13:49</td>   <td>0</td> <td title="&gt;&gt;TestDriver.suiteSetup()[pri:0, instance:com.svam.driver.TestDriver@34cd072c]">&gt;&gt;suiteSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>19/10/10 19:13:53</td>   <td>3873</td> <td>&nbsp;</td><td title="&gt;&gt;CDSMapping.appInitilization()[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">&gt;&gt;appInitilization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>19/10/10 19:13:53</td>   <td>3916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CDSMapping.startReporting(java.lang.reflect.Method)[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">&gt;&gt;startReporting</td> 
-<td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>19/10/10 19:13:53</td>   <td>3996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CDSMapping.mapping()[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">mapping</td> 
-  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>19/10/10 19:22:40</td>   <td>530167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CDSMapping.testResult(java.lang.reflect.Method, org.testng.ITestResult)[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">&lt;&lt;testResult</td> 
-<td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>19/10/10 19:22:40</td>   <td>530794</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CDSMapping.generateResult()[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">&lt;&lt;generateResult</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="7567f1">  <td>19/10/10 19:22:41</td>   <td>531249</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestDriver.suiteTearDown()[pri:0, instance:com.svam.twentyeighty.tests.CDSMapping@7a1ebcd8]">&lt;&lt;suiteTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
-<tr bgcolor="7567f1">  <td>19/10/10 19:22:41</td>   <td>531327</td> <td title="&lt;&lt;TestDriver.testTearDown()[pri:0, instance:com.svam.driver.TestDriver@34cd072c]">&lt;&lt;testTearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1728790703</td>   <td></td> </tr>
+<tr bgcolor="7567f1">  <td>19/10/22 16:49:22</td>   <td>0</td> <td title="&gt;&gt;TestDriver.suiteSetup()[pri:0, instance:com.svam.driver.TestDriver@5faeada1]">&gt;&gt;suiteSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>19/10/22 16:49:27</td>   <td>4684</td> <td>&nbsp;</td><td title="&gt;&gt;Regression.appInitilization()[pri:0, instance:com.svam.twentyeighty.tests.Regression@528931cf]">&gt;&gt;appInitilization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>19/10/22 16:49:27</td>   <td>4906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Regression.startReporting(java.lang.reflect.Method)[pri:0, instance:com.svam.twentyeighty.tests.Regression@528931cf]">&gt;&gt;startReporting</td> 
+<td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>19/10/22 16:49:27</td>   <td>4989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Regression.Registration_Verification_ResellerToCPC()[pri:14, instance:com.svam.twentyeighty.tests.Regression@528931cf]">Registration_Verification_ResellerToCPC</td> 
+  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>19/10/22 16:49:32</td>   <td>10591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Regression.testResult(java.lang.reflect.Method, org.testng.ITestResult)[pri:0, instance:com.svam.twentyeighty.tests.Regression@528931cf]">&lt;&lt;testResult</td> 
+<td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>19/10/22 16:49:33</td>   <td>10886</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Regression.generateResult()[pri:0, instance:com.svam.twentyeighty.tests.Regression@528931cf]">&lt;&lt;generateResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="7567f1">  <td>19/10/22 16:49:33</td>   <td>11387</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestDriver.suiteTearDown()[pri:0, instance:com.svam.twentyeighty.tests.Regression@528931cf]">&lt;&lt;suiteTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="7567f1">  <td>19/10/22 16:49:33</td>   <td>11445</td> <td title="&lt;&lt;TestDriver.testTearDown()[pri:0, instance:com.svam.driver.TestDriver@5faeada1]">&lt;&lt;testTearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1154002927</td>   <td></td> </tr>
 </table>
